--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
 h1 {
     background-color: green;
 }
+
+table {
+    width: 80%;
+    border-collapse: collapse;
+    border: 1px solid grey;
+}
+
+td, th {
+    border: 1px solid grey;
+    padding: 8px;
+    margin: 2px;
+    text-align: left;
+
+}
+
+tr:nth-child(even){
+    background-color:lightgrey;
+}
