--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ h1 {
     color: white;
     margin: 5px;
 
-    background-color: darkslateblue;
+    background-color: #29B38A;
     text-align: center;
 }
 
@@ -29,7 +29,7 @@ tr:nth-child(even){
 
 form {
     margin: 5px;
-    background-color: beige;
+    background-color:#2298BF;
     padding:0 2px 10px 2px;
 }
 
@@ -38,7 +38,8 @@ input {
 }
 
 h3 {
-    background-color: beige;
+    padding: 5px;
+    background-color:#2298BF;
     margin: 5px;
     margin-bottom: 5px;
 }
@@ -47,7 +48,7 @@ h2 {
     margin: 5px;
     color: white;
     text-align: right;
-    background-color:darkslateblue;
+    background-color:#29B38A;
 }
 
 .salary {
