--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@
 
 h1 {
     color: white;
-    margin: 5px;
-
+    margin-bottom: 5px;
     background-color: #29B38A;
     text-align: center;
 }
@@ -28,7 +27,8 @@ tr:nth-child(even){
 }
 
 form {
-    margin: 5px;
+    margin: 0;
+    border: 5px solid #2298BF;
     background-color:#2298BF;
     padding:0 2px 10px 2px;
 }
@@ -38,14 +38,16 @@ input {
 }
 
 h3 {
+    color: white;
     padding: 5px;
     background-color:#2298BF;
-    margin: 5px;
-    margin-bottom: 5px;
+    margin: 0;
+    border: 5px solid #2298BF;
 }
 
 h2 {
-    margin: 5px;
+    padding: 5px;
+    margin: 0;
     color: white;
     text-align: right;
     background-color:#29B38A;
@@ -59,3 +61,9 @@ h2 {
     text-align: center;
 }
 
+/* Removes the arrows from number inputs */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
